tests/ui/cast/ptr-to-trait-obj-different-regions-id-trait.next.stderr
error: lifetime may not live long enough
  --> $DIR/ptr-to-trait-obj-different-regions-id-trait.rs:24:27
   |
LL | fn m<'a>() {
   |      -- lifetime `'a` defined here
LL |     let unsend: *const dyn Cat<'a> = &();
LL |     let _send = unsend as *const S<dyn Cat<'static>>;
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

